tried adding doctype

--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="./images/logo.svg" type="image/svg+xml" />
-    <title>DEVHANCE</title>
-  </head>
+<!DOCTYPE html>
 
-  <body>
-    <nav>
-      <img src="./images/logo.svg" alt="DEVHANCE logo" />
-      <p>DEVHANCE</p>
-    </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="icon" href="./images/logo.svg" type="image/svg+xml" />
+  <title>DEVHANCE</title>
+</head>
 
-    <main>
-      <div class="title">
-        SEE THE
-        <span class="pink">CLARITY</span>
-        IN YOUR
-        <span class="pink">MEMORIES</span>.
-      </div>
+<body>
+  <nav>
+    <img src="./images/logo.svg" alt="DEVHANCE logo" />
+    <p>DEVHANCE</p>
+  </nav>
 
-      <div class="upload-box">
-        <label for="image-input" class="input-wrapper">
-          <input type="file" id="image-input" style="display: none" />
-          <label for="image-input" class="image-input-button"
-            >Upload Image</label
-          >
-          <p>or drag and drop an image into this box</p>
-        </label>
+  <main>
+    <div class="title">
+      SEE THE
+      <span class="pink">CLARITY</span>
+      IN YOUR
+      <span class="pink">MEMORIES</span>.
+    </div>
 
-        <div class="loader" id="loader" style="display: none"></div>
-      </div>
+    <div class="upload-box">
+      <label for="image-input" class="input-wrapper">
+        <input type="file" id="image-input" style="display: none" />
+        <label for="image-input" class="image-input-button">Upload Image</label>
+        <p>or drag and drop an image into this box</p>
+      </label>
 
-      <div class="choices" style="display: none">
-        <button class="button-pink" id="saveButton" role="button">
-          Save Image
-        </button>
-        <button class="button-orange" id="reload-button" role="button">
-          Upload Another
-        </button>
-      </div>
-    </main>
+      <div class="loader" id="loader" style="display: none"></div>
+    </div>
 
-    <script src="./script.js" type="module"></script>
-  </body>
+    <div class="choices" style="display: none">
+      <button class="button-pink" id="saveButton" role="button">
+        Save Image
+      </button>
+      <button class="button-orange" id="reload-button" role="button">
+        Upload Another
+      </button>
+    </div>
+  </main>
+
+  <script src="./script.js" type="module"></script>
+</body>
+
 </html>
