--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 
 <head>
   <meta charset="UTF-8" />
@@ -30,6 +30,13 @@
       </label>
 
       <div class="loader" id="loader" style="display: none"></div>
+
+      <div class="original-image" id="original-image" style="display: none">
+        <p>Original Image</p>
+      </div>
+      <div class="wthe-image" id="wthe-image" style="display: none">
+        <p>Enchanced Image</p>
+      </div>
     </div>
 
     <div class="choices" style="display: none">
